Try to fix countdown display on mobile
ref #13

--- a/wedding_site/static/css/countdown.css
+++ b/wedding_site/static/css/countdown.css
@@ -9,7 +9,8 @@ div.image-div {
     border-radius: 25px;
     -moz-border-radius: 25px;
     -webkit-border-radius: 25px;
-    width: 100%;
+    width: 1140px;
+    height: 623px;
     font-family: 'Permanent Marker', cursive;
 }
 
